blog first commit

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,182 @@
-.App {
-  text-align: center;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&family=VT323&display=swap');
+
+/* layout */
+:root {
+  --primary: #1aac83;
+  --error: #e7195a;
+}
+body {
+  background: #f1f1f1;
+  background-image:url("images/paper.jpg");
+  /* background-repeat: no-repeat, repeat; */
+  margin: 0;
+  font-family: "Poppins";
+}
+header {
+  background: #fff;
+}
+header .container {
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 5px 10px;
+  display: flex;
+  align-items: center; 
+   justify-content: flex-end;
+   column-gap: 60px; 
+}
+header a {
+  color: #333;
+  text-decoration: none;
+}
+.pages{
+  max-width: 1400px;
+  padding: 20px;
+  margin: 0 auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* homepage */
+.Home {
+  /* display: grid; */
+  /* grid-template-columns: 3fr 1fr; */
+  gap: 100px;
+  
+}
+ .workout-details {
+  
+  color: black;
+  border-radius: 4px;
+   /* margin-top: 20px;
+   margin-left: 20px; */
+   height: auto;
+   
+   padding-top: 50px;
+  padding-bottom: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
+  
+  position: relative;
+   box-shadow: 2px 2px 12px rgba(0,0,0,0.8); 
+  border-radius: 14px;
+}
+.excluded > .navbar{
+  display: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+
+.workout-details h3 {
+  margin: 0 0 10px 0;
+  font-size: 1.2em;
+  color: var(--primary);
+}
+.workout-details p {
+  margin: 0;
+  
+  color: black;
+}
+.workout-details span {
+  position: absolute;
+  bottom: 0px;
+  left: 60px;
+  cursor: pointer;
+ 
+  padding: 6px;
+  border-radius: 20%;
+  color: white;
+}
+.workout-details .span2{
+  left: 12px;
+  bottom:0px;
+  position: absolute;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+label,input{
+  display: block;
+}
+input{
+  padding: 10px;
+  width: 100%;
+  font-family: "Poppings";
+  border: 1px solid #ddd;
+  margin-bottom: 20px;
+  border-radius: 4px;
+  margin-top: 10px;
+  box-sizing: border-box;
+  background-color: #333;
+  color: white;
+}
+form button {
+  background:white;
+  border: 0;
+  color: #333;
+  padding: 10px;
+  font-family: "Poppins";
+  border-radius: 4px;
+  cursor: pointer;
+}
+.container{
+  text-align: left;
+}
+
+/* .myinput{
+  width:50%;
+  margin-left: 25%;
+  background-color: #333;
+} */
+/* .comment-form{
+  width: 600px;
+  margin:  0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+}
+.comment-form h3{
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+
+}
+.comment-form form {
+  display: flex;
+  flex-direction: column;
+}
+.comment-form textarea{
+  height :200px;
+  width: 300px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 10px;
+  resize: vertical;
+
+}
+.comment-form button[type='submit']{
+  background-color: #4caf50;
+  color: #fff;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.comment-form button[type= 'submit']{
+  background-color: #45a049;
+} */
+
+/* ProfileTabs.css */
+
+.active-tab {
+  
+border-bottom: 2px solid #3498db;
+ 
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
